--- a/server/templates/map.html
+++ b/server/templates/map.html
@@ -105,7 +105,7 @@
             <li class="active"><a href="/map">map</a></li>
             <li><a href="/heat">heat map</a></li>
             <li><a href="/stats">statistics</a></li>
-            <li><a href="/best_users">best users</a></li>
+            <li><a href="/best_users">best citizens</a></li>
             <li>
               <div class="col-xs-12 col-sm-6 col-lg-8" style = "margin-top:17px; border-radius:5px;">
                <select onChange = "updateFilter()" name="category" style = "border-radius:5px;"id="category">
