--- a/server/templates/heat_map.html
+++ b/server/templates/heat_map.html
@@ -131,7 +131,7 @@
             <li><a href="/map">map</a></li>
             <li class="active"><a href="/heat">heat map</a></li>
             <li><a href="/stats">statistics</a></li>
-            <li><a href="/best_users">best users</a></li>
+            <li><a href="/best_users">best citizens</a></li>
           </ul>
         </div>
       </div>
