--- a/server/templates/upload.html
+++ b/server/templates/upload.html
@@ -111,7 +111,7 @@
             <li><a href="/map">map</a></li>
             <li><a href="/heat">heat map</a></li>
             <li><a href="/stats">statistics</a></li>
-            <li><a href="/best_users">best users</a></li>
+            <li><a href="/best_users">best citizens</a></li>
           </ul>
         </div>
       </div>
