--- a/server/templates/upload.html
+++ b/server/templates/upload.html
@@ -163,11 +163,11 @@
                 <div class="row">
                   <div class="col-xs-6 col-sm-6 col-lg-6">
                   <label for="latitude"><small>Latitude:</small></label>
-                    <input type="text" class="form-control" id="latitude" name="latitude" disabled />
+                    <input type="text" class="form-control" id="latitude" name="latitude" />
                   </div>
                   <div class="col-xs-6 col-sm-6 col-lg-6">
-                    <label for="longtitude"><small>Longitude:</small></label>
-                    <input type="text" class="form-control" id="longitude" name="longitude" disabled />
+                    <label for="longitude"><small>Longitude:</small></label>
+                    <input type="text" class="form-control" id="longitude" name="longitude" />
                   </div>
                 </div>
               </div>
