--- a/server/templates/upload.html
+++ b/server/templates/upload.html
@@ -180,7 +180,7 @@
         </section>
       </div>
 
-      <div class="navbar-inverse navbar-fixed-bottom">
+      <div class="navbar-inverse navbar-fixed-bottom" style="margin-top: 20px">
         <div style="text-align: center; color: white;">
           <p class="small">Michele, Nikola, Veselin and Yazan @ GreatUniHack, Manchester, 2015.</p>
         </div>
