margin bottom fixed
for mobile devices

--- a/server/templates/upload.html
+++ b/server/templates/upload.html
@@ -108,8 +108,8 @@
         background-color: white !important;
         cursor: text !important;
       }
-      .label-as-badge {
-        border-radius: 1em;
+      body {
+        padding-top: 80px;
       }
     </style>
     <title>eCitizen: Post a picture</title>
@@ -138,8 +138,8 @@
       </div>
     </nav>
 
-    <div class="container-fluid">
-        <div class="page-header" style="margin-top:80px"><h1>Share a problem</h1></div>
+    <div class="container-fluid" style="margin-bottom: 40px">
+        <div class="page-header"><h1>Share a problem</h1></div>
         <section>
           <form enctype="multipart/form-data" method="post" action="/upload">
             <div class="form-group">
@@ -201,7 +201,7 @@
         </section>
       </div>
 
-      <div class="navbar-inverse navbar-fixed-bottom" style="margin-top: 20px;">
+      <div class="navbar-inverse navbar-fixed-bottom" style="padding-top: -200px;">
         <div style="text-align: center; color: white;">
           <p class="small">Michele, Nikola, Veselin and Yazan @ GreatUniHack, Manchester, 2015.</p>
         </div>
