--- a/server/templates/upload.html
+++ b/server/templates/upload.html
@@ -138,7 +138,7 @@
       </div>
     </nav>
 
-    <div class="container-fluid" style="margin-bottom: 40px">
+    <div class="container-fluid">
         <div class="page-header"><h1>Share a problem</h1></div>
         <section>
           <form enctype="multipart/form-data" method="post" action="/upload">
@@ -195,7 +195,7 @@
             </div>
             <div class="col-xs-12 col-sm-12 col-lg-12">
               <button type="submit" class="btn btn-success">Share</button>
-              <button type="button" class="btn btn">Clear</button>
+              <button type="button" class="btn btn">Clear</button><br /><br /><br />
             </div>
           </form>
         </section>
