Fix of image upload

--- a/server/templates/heat_map.html
+++ b/server/templates/heat_map.html
@@ -132,6 +132,7 @@
             <li><a href="/map">map</a></li>
             <li><a href="/heat">heat map</a></li>
 			<li><a href="/stats">statistics</a></li>
+			<li><a href="/best_users">best users</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
