--- a/server/templates/contributors.html
+++ b/server/templates/contributors.html
@@ -56,14 +56,14 @@
    <h3 style="margin-left:20px">Graffiti</h3>
    <div style="margin-left:20px">
    {% for g in graffiti %}
-   {{loop.index}} {{g[1]}} : {{g[2]}}  <a href="token"><input type="image"  style="position: relative; left:10px; top:10px" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" alt="Paypal btn" class="paypalbtn" /></a> <br/>
+   {{loop.index}} {{g[1]}} : {{g[2]}}  <a href="client_token"><input type="image"  style="position: relative; left:10px; top:10px" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" alt="Paypal btn" class="paypalbtn" /></a> <br/>
    {% endfor %}
    </div>
    
    <h3 style="margin-left:20px">Broken Streets</h3>
    <div style="margin-left:20px">
    {% for g in broken_streets %}
-   {{loop.index}} {{g[1]}} : {{g[3]}} <input type="image" onclick="location.href = 'requestToken.html';" style="position: relative; left:10px; top:10px" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" alt="Paypal btn" /><br/>
+   {{loop.index}} {{g[1]}} : {{g[3]}} <a href="client_token"><input type="image" style="position: relative; left:10px; top:10px" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" alt="Paypal btn" /></a><br/>
    {% endfor %}
    </div>
    
