--- a/server/templates/heat_map.html
+++ b/server/templates/heat_map.html
@@ -38,7 +38,7 @@
         var mapOptions = {
           zoom: 14,
           center: new google.maps.LatLng(53.4793,-2.2479),
-          mapTypeId: google.maps.MapTypeId.ROADMAP
+          mapTypeId: google.maps.MapTypeId.SATELLITE
         };
 
         map = new google.maps.Map(document.getElementById('map-canvas'),
@@ -86,14 +86,14 @@
       }
 
       google.maps.event.addDomListener(window, 'load', initialize);
-	  function leaveChange() {
-	  var taxiData = [];
+    function leaveChange() {
+    var taxiData = [];
         {% for s in records %}
-		if("{{s[1]}}"==document.getElementById("category").value || "all"==document.getElementById("category").value)
-			taxiData.push(new google.maps.LatLng({{s[4]}},{{s[3]}}));
+    if("{{s[1]}}"==document.getElementById("category").value || "all"==document.getElementById("category").value)
+      taxiData.push(new google.maps.LatLng({{s[4]}},{{s[3]}}));
         {%endfor %}
       
-	  var mapOptions = {
+    var mapOptions = {
           zoom: 14,
           center: new google.maps.LatLng(53.4793,-2.2479),
           mapTypeId: google.maps.MapTypeId.SATELLITE
@@ -143,8 +143,8 @@
       <button onclick="changeGradient()">Change gradient</button>
       <button onclick="changeRadius()">Change radius</button>
       <button onclick="changeOpacity()">Change opacity</button>
-	  <select name="category" id="category" onchange="leaveChange()">
-								<option value="all">All</option>
+    <select name="category" id="category" onchange="leaveChange()">
+                <option value="all">All</option>
                               <option value="graffiti">Graffiti</option>
                               <option value="broken_streets">Broken Streets</option>
                               <option value="broken_labels">Broken labels</option>
