--- a/server/templates/upload.html
+++ b/server/templates/upload.html
@@ -1,213 +1,153 @@
-﻿<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-    <script src="http://maps.googleapis.com/maps/api/js"></script>
-    <script>
-      /* FILEBUTTON */
-      $(document).on('change', '.btn-file :file', function() {
-        var input = $(this),
-            numFiles = input.get(0).files ? input.get(0).files.length : 1,
-            label = input.val().replace(/\\/g, '/').replace(/.*\//, '');
-        input.trigger('fileselect', [numFiles, label]);
+﻿{% set active_page = 'upload_shot' %}
+{% extends "base.html" %}
+
+{% block title %}Report a problem{% endblock %}
+{% block script %}
+<script>
+  /* FILEBUTTON */
+  $(document).on('change', '.btn-file :file', function() {
+    var input = $(this),
+        numFiles = input.get(0).files ? input.get(0).files.length : 1,
+        label = input.val().replace(/\\/g, '/').replace(/.*\//, '');
+    input.trigger('fileselect', [numFiles, label]);
+  });
+
+  $(document).ready( function() {
+    $('.btn-file :file').on('fileselect', function(event, numFiles, label) {
+      var input = $(this).parents('.input-group').find(':text'),
+          log = numFiles > 1 ? numFiles + ' files selected' : label;
+      
+      if( input.length ) {
+          input.val(log);
+      } else {
+          if( log ) alert(log);
+      }
+    });
+  });
+
+  /* GET COORDINATES */
+  function codeLatLngfromclick(event) {
+      var lat = event.latLng.lat();
+      var lng = event.latLng.lng();
+      document.getElementById("latitude").value = lat;
+      document.getElementById("longitude").value = lng;
+  }
+
+  /* GOOGLE MAPS */
+  function initialize() {
+      var mapProp = {
+          center:new google.maps.LatLng(0,0), zoom:5,
+          mapTypeId:google.maps.MapTypeId.ROADMAP
+      };
+      var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
+      
+      if(navigator.geolocation)
+      {
+          navigator.geolocation.getCurrentPosition(function(position) {
+          var pos = new google.maps.LatLng(position.coords.latitude, position.coords.longitude);
+          document.getElementById("latitude").value = position.coords.latitude;
+          document.getElementById("longitude").value = position.coords.longitude;       
+          marker = new google.maps.Marker({
+              map: map,
+              position: pos
+          });
+
+          map.setCenter(pos);
+          mapLoaded = 1;
       });
-
-      $(document).ready( function() {
-        $('.btn-file :file').on('fileselect', function(event, numFiles, label) {
-          var input = $(this).parents('.input-group').find(':text'),
-              log = numFiles > 1 ? numFiles + ' files selected' : label;
-          
-          if( input.length ) {
-              input.val(log);
-          } else {
-              if( log ) alert(log);
-          }
-        });
-      });
-
-      /* GET COORDINATES */
-      function codeLatLngfromclick(event) {
-          var lat = event.latLng.lat();
-          var lng = event.latLng.lng();
-          document.getElementById("latitude").value = lat;
-          document.getElementById("longitude").value = lng;
       }
 
-      /* GOOGLE MAPS */
-      function initialize() {
-          var mapProp = {
-              center:new google.maps.LatLng(0,0), zoom:5,
-              mapTypeId:google.maps.MapTypeId.ROADMAP
-          };
-          var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
-          
-          if(navigator.geolocation)
-          {
-              navigator.geolocation.getCurrentPosition(function(position) {
-              var pos = new google.maps.LatLng(position.coords.latitude, position.coords.longitude);
-              document.getElementById("latitude").value = position.coords.latitude;
-              document.getElementById("longitude").value = position.coords.longitude;       
-              marker = new google.maps.Marker({
-                  map: map,
-                  position: pos
-              });
+      google.maps.event.addListener(map, 'click', codeLatLngfromclick);
+  }
+  google.maps.event.addDomListener(window, 'load', initialize);
+  navigator.geolocation.getCurrentPosition
+</script>
+{% endblock %}
+{% block style %}
+<style>
+  .btn-file {
+    position: relative;
+    overflow: hidden;
+  }
+  .btn-file input[type=file] {
+    position: absolute;
+    top: 0;
+    right: 0;
+    min-width: 100%;
+    min-height: 100%;
+    font-size: 100px;
+    text-align: right;
+    filter: alpha(opacity=0);
+    opacity: 0;
+    background: red;
+    cursor: inherit;
+    display: block;
+  }
+  input[readonly] {
+    background-color: white !important;
+    cursor: text !important;
+  }
+</style>
+{% endblock %}
 
-              map.setCenter(pos);
-              mapLoaded = 1;
-          }, function() {
-                  defaultMap();
-              });
-          }
-          else
-          {
-              defaultMap();
-          }
-
-          google.maps.event.addListener(map, 'click', codeLatLngfromclick);
-      }
-      google.maps.event.addDomListener(window, 'load', initialize);
-      navigator.geolocation.getCurrentPosition
-    </script>
-    <style>
-      html, body, #map-canvas {
-        height: 100%;
-        margin: 0px;
-        padding: 0px
-      }
-      #panel {
-        position: absolute;
-        top: 5px;
-        left: 50%;
-        margin-left: -180px;
-        z-index: 5;
-        background-color: #fff;
-        padding: 5px;
-        border: 1px solid #999;
-      }
-      .btn-file {
-        position: relative;
-        overflow: hidden;
-      }
-      .btn-file input[type=file] {
-        position: absolute;
-        top: 0;
-        right: 0;
-        min-width: 100%;
-        min-height: 100%;
-        font-size: 100px;
-        text-align: right;
-        filter: alpha(opacity=0);
-        opacity: 0;
-        background: red;
-        cursor: inherit;
-        display: block;
-      }
-      input[readonly] {
-        background-color: white !important;
-        cursor: text !important;
-      }
-      body {
-        padding-top: 40px;
-      }
-    </style>
-    <title>eCitizen: Post a picture</title>
-</head>
-<body class="gradient">
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="/">eCitizen</a>
+{% block content %}
+<div class="page-header"><h1>Share a problem</h1></div>
+  <form enctype="multipart/form-data" method="post" action="/upload">
+    <div class="form-group">
+      <div class="col-xs-12 col-sm-6 col-lg-6">
+        <div>
+          <label for="shot_file">Picture:</label>
+          <div class="input-group">
+            <span class="input-group-btn">
+              <span class="btn btn-primary btn-file">
+              Browse&hellip; <input type="file" name="shot_file" id="shot_file" required>
+              </span>
+            </span>
+            <input type="text" class="form-control" readonly>
+          </div>
+        </div><br />
+        <div>
+          <label for="username">Your username*:</label>
+          <input type="text" name="username" class="form-control" id="username" required /><br />
         </div>
-        <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-          <li class="active"><a href="/upload_shot">report <span class="label label-success label-as-badge">+1</span></a></li>
-            <li><a href="/map">map</a></li>
-            <li><a href="/heat">heat map</a></li>
-            <li><a href="/stats">statistics</a></li>
-            <li><a href="/best_users">best citizens</a></li>
-          </ul>
+        <div>
+          <label for="username">Category*:</label>
+          <select name="category" id="category" class="form-control">
+            <option value="graffiti">Graffiti</option>
+            <option value="broken_streets">Broken Streets</option>
+            <option value="broken_labels">Broken labels</option>
+            <option value="fire">Fire</option>
+            <option value="lighting">Lighting</option>
+            <option value="garbage">Garbage</option>
+          </select><br />
+        </div>
+        <div>
+          <label for="comment">Comment:</label>
+          <textarea class="form-control" rows="5" name="comment" id="comment"></textarea><br />
         </div>
       </div>
-    </nav>
-
-    <div class="container-fluid">
-        <div class="page-header"><h1>Share a problem</h1></div>
-        <section>
-          <form enctype="multipart/form-data" method="post" action="/upload">
-            <div class="form-group">
-              <div class="col-xs-12 col-sm-6 col-lg-6">
-                <div>
-                  <label for="shot_file">Picture:</label>
-                  <div class="input-group">
-                    <span class="input-group-btn">
-                      <span class="btn btn-primary btn-file">
-                      Browse&hellip; <input type="file" name="shot_file" id="shot_file" required>
-                      </span>
-                    </span>
-                    <input type="text" class="form-control" readonly>
-                  </div>
-                </div><br />
-                <div>
-                  <label for="username">Your username*:</label>
-                  <input type="text" name="username" class="form-control" id="username" required /><br />
-                </div>
-                <div>
-                  <label for="username">Category*:</label>
-                  <select name="category" id="category" class="form-control">
-                    <option value="graffiti">Graffiti</option>
-                    <option value="broken_streets">Broken Streets</option>
-                    <option value="broken_labels">Broken labels</option>
-                    <option value="fire">Fire</option>
-                    <option value="lighting">Lighting</option>
-                    <option value="garbage">Garbage</option>
-                  </select><br />
-                </div>
-                <div>
-                  <label for="comment">Comment:</label>
-                  <textarea class="form-control" rows="5" name="comment" id="comment"></textarea><br />
-                </div>
-              </div>
-              
-              <div class="col-xs-12 col-sm-6 col-lg-6">
-                <div>
-                  <label for="googleMap">Map:</label>
-                  <div id="googleMap" class="col-xs-12" style="height:290px;"></div>
-                </div>
-                <div class="row">
-                  <div class="col-xs-6 col-sm-6 col-lg-6">
-                  <label for="latitude"><small>Latitude:</small></label>
-                    <input type="text" class="form-control" id="latitude" name="latitude" />
-                  </div>
-                  <div class="col-xs-6 col-sm-6 col-lg-6">
-                    <label for="longitude"><small>Longitude:</small></label>
-                    <input type="text" class="form-control" id="longitude" name="longitude" />
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-xs-12 col-sm-12 col-lg-12">
-              <button type="submit" class="btn btn-success">Share</button>
-              <button type="button" class="btn btn">Clear</button><br /><br /><br />
-            </div>
-          </form>
-        </section>
-      </div>
-
-      <div class="navbar-inverse navbar-fixed-bottom" style="padding-top: -200px;">
-
-        <div style="text-align: center; color: white;">
-          <p class="small">Michele, Nikola, Veselin and Yazan @ GreatUniHack, Manchester, 2015.</p>
+      
+      <div class="col-xs-12 col-sm-6 col-lg-6">
+        <div>
+          <label for="googleMap">Map:</label>
+          <div id="googleMap" class="col-xs-12" style="height:290px;"></div>
+        </div>
+        <div class="row">
+          <div class="col-xs-6 col-sm-6 col-lg-6">
+          <label for="latitude"><small>Latitude:</small></label>
+            <input type="text" class="form-control" id="latitude" name="latitude" />
+          </div>
+          <div class="col-xs-6 col-sm-6 col-lg-6">
+            <label for="longitude"><small>Longitude:</small></label>
+            <input type="text" class="form-control" id="longitude" name="longitude" />
+          </div>
         </div>
       </div>
-  </body>
-</html>
+    </div>
+    <div class="col-xs-12 col-sm-12 col-lg-12">
+      <button type="submit" class="btn btn-success">Share</button>
+      <button type="button" class="btn btn">Clear</button><br /><br /><br />
+    </div>
+  </form>
+</div>
+{% endblock %}
