--- a/server/templates/heat_map.html
+++ b/server/templates/heat_map.html
@@ -1,165 +1,93 @@
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-    <title>eCitizen: Heat-map</title>
-    <style>
-      html, body, #map-canvas {
-        height: 100%;
-        margin: 0px;
-        padding: 0px
-      }
-      #panel {
-        position: absolute;
-        top: 5px;
-        left: 50%;
-        margin-left: -180px;
-        z-index: 5;
-        background-color: #fff;
-        padding: 5px;
-        border: 1px solid #999;
-      }
-    </style>
-    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true&libraries=visualization"></script>
-    <script>
-      // Adding data points
-      var map, pointarray, heatmap;
-      var taxiData = [
-        {% for s in records %}
-          new google.maps.LatLng({{s[4]}},{{s[3]}}),
-        {%endfor %}
-      ];
+{% set active_page = 'heat_map' %}
+{% extends "base.html" %}
 
-      function initialize() {
-        var mapOptions = {
-          zoom: 14,
-          center: new google.maps.LatLng(53.4793,-2.2479),
-          mapTypeId: google.maps.MapTypeId.SATELLITE
-        };
+{% block title %}Heat map{% endblock %}
+{% block style %}
+<style>
+  #map-canvas {
+    height: 100%;
+    margin: 0px;
+    padding: 0px
+  }
+  #panel {
+    position: absolute;
+    top: 5px;
+    left: 50%;
+    z-index: 5;
+    background-color: #fff;
+    padding: 10px;
+    border: 1px solid #999;
+  }
+</style>
+{% endblock %}
 
-        map = new google.maps.Map(document.getElementById('map-canvas'),
-        mapOptions);
+{% block script %}
+<script>
+  // Adding data points
+  var map, pointarray, heatmap;
+  var taxiData = [
+    {% for s in records %}{% if s[1] == request.args.get('type') or request.args.get('type', '') == '' %}
+    new google.maps.LatLng({{s[4]}},{{s[3]}}),{% endif %}{%endfor %}
+  ];
 
-        var pointArray = new google.maps.MVCArray(taxiData);
-
-        heatmap = new google.maps.visualization.HeatmapLayer({
-          data: pointArray
-        });
-
-        heatmap.setMap(map);
-      }
-
-      function toggleHeatmap() {
-        heatmap.setMap(heatmap.getMap() ? null : map);
-      }
-
-      function changeGradient() {
-        var gradient = [
-          'rgba(0, 255, 255, 0)',
-          'rgba(0, 255, 255, 1)',
-          'rgba(0, 191, 255, 1)',
-          'rgba(0, 127, 255, 1)',
-          'rgba(0, 63, 255, 1)',
-          'rgba(0, 0, 255, 1)',
-          'rgba(0, 0, 223, 1)',
-          'rgba(0, 0, 191, 1)',
-          'rgba(0, 0, 159, 1)',
-          'rgba(0, 0, 127, 1)',
-          'rgba(63, 0, 91, 1)',
-          'rgba(127, 0, 63, 1)',
-          'rgba(191, 0, 31, 1)',
-          'rgba(255, 0, 0, 1)'
-        ]
-        heatmap.set('gradient', heatmap.get('gradient') ? null : gradient);
-      }
-
-      function changeRadius() {
-        heatmap.set('radius', heatmap.get('radius') ? null : 100);
-      }
-
-      function changeOpacity() {
-        heatmap.set('opacity', heatmap.get('opacity') ? null : 0.3);
-      }
-
-      google.maps.event.addDomListener(window, 'load', initialize);
-    function leaveChange() {
-    var taxiData = [];
-        {% for s in records %}
-    if("{{s[1]}}"==document.getElementById("category").value || "all"==document.getElementById("category").value)
-      taxiData.push(new google.maps.LatLng({{s[4]}},{{s[3]}}));
-        {%endfor %}
-      
+  function initialize() {
     var mapOptions = {
-          zoom: 14,
-          center: new google.maps.LatLng(53.4793,-2.2479),
-          mapTypeId: google.maps.MapTypeId.SATELLITE
-        };
+      zoom: 14,
+      center: new google.maps.LatLng(53.4793,-2.2479),
+      mapTypeId: google.maps.MapTypeId.SATELLITE
+    };
 
-        map = new google.maps.Map(document.getElementById('map-canvas'),
-        mapOptions);
+    map = new google.maps.Map(document.getElementById('map-canvas'),
+    mapOptions);
 
-        var pointArray = new google.maps.MVCArray(taxiData);
+    if(navigator.geolocation)
+    {
+      navigator.geolocation.getCurrentPosition(function(position) {
+      var pos = new google.maps.LatLng(position.coords.latitude, position.coords.longitude);
+      map.setCenter(pos);
+      mapLoaded = 1;
+    });
+    }
 
-        heatmap = new google.maps.visualization.HeatmapLayer({
-          data: pointArray
-        });
+    var pointArray = new google.maps.MVCArray(taxiData);
+    heatmap = new google.maps.visualization.HeatmapLayer({
+      data: pointArray
+    });
+    heatmap.setMap(map);
+    heatmap.set('radius', 20);
+    heatmap.set('opacity', 0.5);
+  }
 
-        heatmap.setMap(map);
-}
-    </script>
-  </head>
+  google.maps.event.addDomListener(window, 'load', initialize);
+</script>
+{% endblock %}
 
-  <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="/">eCitizen</a>
-        </div>
-        <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li><a href="/upload_shot">report <span class="label label-success label-as-badge">+1</span></a></li>
-            <li><a href="/map">map</a></li>
-            <li class="active"><a href="/heat">heat map</a></li>
-            <li><a href="/stats">statistics</a></li>
-            <li><a href="/best_users">best citizens</a></li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+{% block nav %}
+<ul class="nav navbar-nav navbar-right">
+  <li><a>Radius (<span id="radius">20</span>):</a></li>
+  <li style="margin-top:16px">><input id="S" type="text" class="dropdown-toggle" data-slider-value="20" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-tooltip="hide"></li>
+  <li class="dropdown">
+    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Filter by type <span class="caret"></span></a>
+    <ul class="dropdown-menu" role="menu">
+      <li><a href="/heat">All</a></li>
+      <li><a href="/heat?type=graffiti">Graffiti</a></li>
+      <li><a href="/heat?type=broken_streets">Broken streets</a></li>
+      <li><a href="/heat?type=broken_labels">Broken labels</a></li>
+      <li><a href="/heat?type=fire">Fire</a></li>
+      <li><a href="/heat?type=lighting">Lighting</a></li>
+      <li><a href="/heat?type=garbage">Garbage</a></li>
+    </ul>
+  </li>
+</ul>
+{% endblock %}
 
-    
-    <div id="panel" style="margin-top: 60px;">
-      <button onclick="toggleHeatmap()">Toggle Heatmap</button>
-      <button onclick="changeGradient()">Change gradient</button>
-      <button onclick="changeRadius()">Change radius</button>
-      <button onclick="changeOpacity()">Change opacity</button>
-    <select name="category" id="category" onchange="leaveChange()">
-                <option value="all">All</option>
-                              <option value="graffiti">Graffiti</option>
-                              <option value="broken_streets">Broken Streets</option>
-                              <option value="broken_labels">Broken labels</option>
-                              <option value="fire">Fire</option>
-                              <option value="lighting">Lighting</option>
-                              <option value="garbage">Garbage</option>
-                            </select>
-    </div>
-    <div id="map-canvas"></div>
-    
-      <div class="navbar-inverse navbar-fixed-bottom">
-        <div style="text-align: center; color: white;">
-          <p class="small">Michele, Nikola, Veselin and Yazan @ GreatUniHack, Manchester, 2015.</p>
-        </div>
-      </div>
-
-  </body>
-</html>
+{% block container %}
+<div id="map-canvas"></div>
+<script>
+$("#S").slider();
+$("#S").on("slide", function(slideEvt) {
+  heatmap.set('radius', slideEvt.value);
+  $('#radius').text(slideEvt.value);
+});
+</script>
+{% endblock %}
