--- a/server/templates/map.html
+++ b/server/templates/map.html
@@ -18,9 +18,8 @@
   var filter = "all";
 
   //UPDATE USER PREFERENCES
-  function updateFilter(){
-    var elementSelect = document.getElementById("category");
-    filter = elementSelect.options[elementSelect.selectedIndex].value;
+  function updateFilter(category){
+    filter = category;
     initialize();
   }
   //UPDATE USER PREFERENCES
@@ -76,6 +75,23 @@
     var map = new google.maps.Map(document.getElementById("map-canvas"), mapOptions);
     map.setCenter(myLatlng);
 </script>
+{% endblock %}
+
+{% block nav %}
+<ul class="nav navbar-nav navbar-right">
+  <li class="dropdown">
+    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Filter by type <span class="caret"></span></a>
+    <ul class="dropdown-menu" role="menu">
+      <li><a href="#" onClick="updateFilter('all');">All</a></li>
+      <li><a href="#" onClick="updateFilter('graffiti');">Graffiti</a></li>
+      <li><a href="#" onClick="updateFilter('broken_streets');">Broken streets</a></li>
+      <li><a href="#" onClick="updateFilter('broken_labels');">Broken labels</a></li>
+      <li><a href="#" onClick="updateFilter('fire');">Fire</a></li>
+      <li><a href="#" onClick="updateFilter('lighting');">Lighting</a></li>
+      <li><a href="#" onClick="updateFilter('garbage');">Garbage</a></li>
+    </ul>
+  </li>
+</ul>
 {% endblock %}
 
 {% block container %}    
