--- a/server/templates/map.html
+++ b/server/templates/map.html
@@ -40,7 +40,7 @@
       google.maps.event.addListener(marker{{loop.index}}, 'click', function() {
       $.magnificPopup.open({
         items: {
-          src: '<div width="450px" height="800px" class="white-popup" style="background-color:white"><img width="400px" src="/static/{{s[0]}}"/><p class="small">{{s[1]}}</p><p>{{s[2]}}</p></div>', 
+          src: '<div width="450px" height="800px" class="white-popup" style="background-color:white"><img width="400px" src="/static/pictures/{{s[0]}}"/><p class="small">{{s[1]}}</p><p>{{s[2]}}</p></div>', 
             },
             type: 'inline'
         });
