--- a/server/templates/heat_map.html
+++ b/server/templates/heat_map.html
@@ -34,7 +34,7 @@
     var mapOptions = {
       zoom: 14,
       center: new google.maps.LatLng(53.4793,-2.2479),
-      mapTypeId: google.maps.MapTypeId.SATELLITE
+      mapTypeId: google.maps.MapTypeId.ROADMAP 
     };
 
     map = new google.maps.Map(document.getElementById('map-canvas'),
